# ERP-K2-test

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml
source/: .env_example  docker-compose.yml
source/app/: main.py
source/app/core/: services.py
source/backend/: .dockerignore  Dockerfile  pyproject.toml
source/backend/app/: main.py  models.py  routes.py
source/backend/app/core/: config.py
source/backend/tests/: conftest.py
source/backend/tests/integration/: test_client.py  test_order.py  test_product.py
source/backend/tests/unit/: service_test.py  test_client.py  test_models.py
source/frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
source/frontend/app/: App.vue  main.ts
source/frontend/app/api/: index.ts
source/frontend/app/assets/: main.css
source/frontend/app/components/: ClientForm.vue  ClientList.vue  OrderForm.vue  OrderList.vue  ProductForm.vue  ProductList.vue
source/frontend/app/components/ui/: AppAlert.vue  AppButton.vue  AppInput.vue
source/frontend/app/pages/: ClientsPage.vue  OrdersPage.vue  ProductsPage.vue
source/frontend/app/router/: index.ts
source/frontend/app/types/: index.ts
source/frontend/src/: App.vue
source/frontend/src/api/: index.ts
source/frontend/src/components/: ClientForm.vue  OrderForm.vue  OrderList.vue  ProductForm.vue
source/frontend/src/components/ui/: AppAlert.vue  AppButton.vue  (+1 more)
source/frontend/src/pages/: ClientsPage.vue  OrdersPage.vue  ProductsPage.vue
source/frontend/src/router/: index.ts
source/frontend/src/types/: index.ts
